--- a/index.html
+++ b/index.html
@@ -80,25 +80,17 @@
                     <div class="container-fluid container-custom">
                         <div class="row">
                             <div class="col-sm-12">
-                                <h1>Hello, I'm Micaela Reyes<br>Software Engineer</h1>
+                                <h1>Hello, I'm Micaela Reyes<br>Software Engineer transitioning to Data Analysis.</h1>
 
                                 <p><strong><i>Code. Passion. Freedom. Making a Difference.</i></strong></p>
 
-                                <p>I'm an Entrepreneur, Software Engineer and Tech Community Leader.</p>
-
-                                <p>I currently run <a href="https://codehappy.ph"><strong>CodeHappy</strong></a>, a grassroots<strong> Python training company</strong> in the Philippines that teaches core and industry-relevant software engineering skills to tech professionals and leaders.</a>
+                                <p>I've spent 15 years in software engineering, mostly working behind the scenes with <strong>Python on backend and web development</strong>. Recently, I've gotten really interested in data analytics. I'm excited to see where this new interest takes me, especially in solving real-world problems.
                                 </p>
 
-                                <p>
-                                Along with that, I've been a <strong>software engineer for more than a decade</strong>. I've worked with various types of projects and have used multiple programming languages prior to specializing in Python.
-                                </p>
+                                <p>In the Python community, I'm pretty active. I serve as the Director of Operations for <a href="https://python.ph"><strong>Python Philippines (PythonPH) </strong></a>, and I mentor at <strong>PyLadies Manila</strong>. I'm also a Python Software Foundation fellow. For me, it's all about people coming together to do cool stuff with technology.
 
                                 <p>
-                                As the Director of Operations for <a href="https://python.ph"><strong>Python Philippines (PythonPH) </strong></a>and a Python Software Foundation Fellow, I actively contribute to the Python community and its growth.
-                                </p>
-
-                                <p>
-                                I consider myself a realist idealist. I love to defy the odds for the things I truly care about.
+                                I approach life as a realist idealist. I love to defy the odds for the things I truly care about.
                                 </p>
                             </div>
                         </div>
