--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
                                 <p><strong><i>Code. Passion. Freedom. Making a Difference.</i></strong></p>
 
-                                <p>I've spent 15 years in software engineering, mostly working behind the scenes with <strong>Python on backend and web development</strong>. Recently, I've gotten really interested in <strong>data analytics</strong>. I'm excited to see where this new interest takes me, especially in solving real-world problems.
+                                <p>I've spent 15 years in software engineering, mostly working behind the scenes with <strong>Python on backend and web development</strong>. I've also dived into entrepreneurship, initiating and spearheading various projects at <a href="https://codehappy.ph"><strong>CodeHappy.ph</strong>. Recently, I've gotten really interested in <strong>data analytics</strong>. I'm excited to see where this new interest takes me, especially in solving real-world problems.
                                 </p>
 
                                 <p>In the Python community, I'm pretty active. I serve as the Director of Operations for <a href="https://python.ph"><strong>Python Philippines (PythonPH) </strong></a>, and I mentor at <strong>PyLadies Manila</strong>. I'm also a Python Software Foundation fellow. For me, it's all about people coming together to do cool stuff with technology.
