Update about me

--- a/index.html
+++ b/index.html
@@ -80,14 +80,18 @@
                     <div class="container-fluid container-custom">
                         <div class="row">
                             <div class="col-sm-12">
-                                <h1>Hello, I'm Micaela Reyes<br>Software Engineer transitioning to Data Analysis.</h1>
+                                <h1>Hello, I'm Micaela Reyes<br>Software Engineer and Data Analyst.</h1>
 
                                 <p><strong><i>Code. Passion. Freedom. Making a Difference.</i></strong></p>
 
-                                <p>I've spent 15 years in software engineering, mostly working behind the scenes with <strong>Python on backend and web development</strong>. I've also dived into entrepreneurship, initiating and spearheading various projects at <a href="https://codehappy.ph"><strong>CodeHappy.ph</strong></a>. Recently, I've gotten really interested in <strong>data analytics</strong>. I'm excited to see where this new interest takes me, especially in solving real-world problems.
+                                <p>I am software engineer with 15 years of experience, specializing in <strong>backend and web development</strong>. Recently, my interest has shifted to <strong>data analytics</strong>, aiming to tackle social disparities and promote economic empowerment through technology education.
                                 </p>
 
-                                <p>In the Python community, I'm pretty active. I serve as the Director of Operations for <a href="https://python.ph"><strong>Python Philippines (PythonPH) </strong></a>, and I mentor at <strong>PyLadies Manila</strong>. I'm also a Python Software Foundation fellow. For me, it's all about people coming together to do cool stuff with technology.
+                                <p>
+                                Along with my team at <a href="https://codehappy.ph"><strong>CodeHappy.ph</strong></a>, we provide specialized Python training that emphasizes practical data skills and core software engineering principles.
+                                </p>
+
+                                <p>In the Python community, I'm quite active. I serve as the Director of Operations for <a href="https://python.ph"><strong>Python Philippines (PythonPH) </strong></a>, mentor at <strong>PyLadies Manila</strong>, I'm also a Python Software Foundation fellow. For me, it's all about people coming together to do cool stuff with technology.
 
                                 <p>
                                 I approach life as a realist idealist. I love to defy the odds for the things I truly care about.
