Update about me

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                 <p>In the Python community, I'm quite active. I serve as the Director of Operations for <a href="https://python.ph"><strong>Python Philippines (PythonPH) </strong></a>, mentor at <strong>PyLadies Manila</strong>, I'm also a Python Software Foundation fellow. For me, it's all about people coming together to do cool stuff with technology.
 
                                 <p>
-                                I approach life as a realist idealist. I love to defy the odds for the things I truly care about.
+                                My approach to life combines practicality with idealism, driving me to confront and reshape established norms in my areas of passion.
                                 </p>
                             </div>
                         </div>
