Update about me

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 Along with my team at <a href="https://codehappy.ph"><strong>CodeHappy.ph</strong></a>, we provide specialized Python training that emphasizes <strong>practical data skills</strong> and <strong>core software engineering</strong> principles.
                                 </p>
 
-                                <p>In the Python community, I'm quite active. I serve as the Director of Operations for <a href="https://python.ph"><strong>Python Philippines (PythonPH) </strong></a>, mentor at <strong>PyLadies Manila</strong>, I'm also a Python Software Foundation fellow. For me, it's all about people coming together to do cool stuff with technology.
+                                <p>In the Python community, I'm quite active. I serve as the Director of Operations for <a href="https://python.ph"><strong>Python Philippines (PythonPH) </strong></a>, mentor at <strong>PyLadies Manila</strong>, an active participant in the <a href="https://pycon.asia"><strong>PyCon APAC</strong></a> community, and a Python Software Foundation fellow. For me, it's all about people coming together to do cool stuff with technology.
 
                                 <p>
                                 My approach to life combines <strong>practicality with idealism</strong>, driving me to confront and reshape established norms in my areas of passion.
