--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
                                 <p><strong><i>Code. Passion. Freedom. Making a Difference.</i></strong></p>
 
-                                <p>I am a software engineer with 15 years of experience, specializing in <strong>backend and web development</strong>. Recently, my interest has shifted to <strong>data analytics</strong>, aiming to tackle social disparities and promote economic empowerment through technology education.
+                                <p>I am a software engineer with 15 years of experience, specializing in <strong>backend and web development</strong>. Recently, my interest has shifted to <strong>data analytics</strong>, aiming to tackle social disparities and promote <strong>economic empowerment</strong> through technology education.
                                 </p>
 
                                 <p>
