--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                             or <span class="page-scroll"><a href="#contact"><strong>contact me</strong></a></span> now if you're ready to get started!</p>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" class="btn btn-social-dark btn-linkedin">
+                                <a href="https://www.linkedin.com/in/codemickeycode/" class="btn btn-social-dark btn-linkedin">
                                     <i class="fa fa-fw fa-linkedin"></i>
                                 </a>
                             </li>
