Update footer links

--- a/index.html
+++ b/index.html
@@ -309,24 +309,24 @@
                         <h2 class="script">Thanks for visiting my website!</h2>
                         <p>Code. Passion. Freedom. Making a Difference.</p>
                     </div>
-   <!--                  <div class="col-md-3 col-md-offset-1">
+                    <div class="col-md-3 col-md-offset-1">
                         <h3 class="script">Find me!</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" class="btn btn-social-light btn-facebook"><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="https://www.linkedin.com/in/codemickeycode/" class="btn btn-social-light btn-linkedin"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn btn-social-light btn-twitter"><i class="fa fa-fw fa-twitter"></i></a>
+                                <a href="https://twitter.com/codemickeycode" class="btn btn-social-light btn-twitter"><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn btn-social-light btn-dribbble"><i class="fa fa-fw fa-dribbble"></i></a>
+                                <a href="https://github.com/codemickeycode" class="btn btn-social-light btn-github"><i class="fa fa-fw fa-github"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn btn-social-light btn-google-plus"><i class="fa fa-fw fa-google-plus"></i></a>
+                                <a href="https://blog.codemickeycode.com" class="btn btn-social-light btn-pencil"><i class="fa fa-fw fa-pencil"></i></a>
                             </li>
                         </ul>
                         <br>
-                    </div> -->
+                    </div>
                 </div>
             </div>
         </footer>
