--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
                                         </h3>
                                     </div>
                                 </div>
-                                <img src="assets/img/demo-portfolio/1.jpg" class="img-centered" alt="">
+                                <img src="assets/img/demo-portfolio/project-placeholder.jpg" class="img-centered" alt="">
                             </a>
                         </div>
-                        <div class="col-sm-4 portfolio-item academic">
+<!--                         <div class="col-sm-4 portfolio-item academic">
                             <a href="#portfolio-modal-2" class="portfolio-link" data-toggle="modal">
                                 <div class="caption">
                                     <div class="caption-content">
@@ -215,7 +215,7 @@
                                 </div>
                                 <img src="assets/img/demo-portfolio/3.jpg" class="img-centered" alt="">
                             </a>
-                        </div>
+                        </div> -->
                         <div class="col-sm-4 portfolio-item data">
                             <a href="#portfolio-modal-2" class="portfolio-link" data-toggle="modal">
                                 <div class="caption">
@@ -224,10 +224,10 @@
                                         </h3>
                                     </div>
                                 </div>
-                                <img src="assets/img/demo-portfolio/4.jpg" class="img-centered" alt="">
+                                <img src="assets/img/demo-portfolio/project-placeholder.jpg" class="img-centered" alt="">
                             </a>
                         </div>
-                        <div class="col-sm-4 portfolio-item academic">
+<!--                         <div class="col-sm-4 portfolio-item academic">
                             <a href="#portfolio-modal-1" class="portfolio-link" data-toggle="modal">
                                 <div class="caption">
                                     <div class="caption-content">
@@ -248,8 +248,8 @@
                                 </div>
                                 <img src="assets/img/demo-portfolio/6.jpg" class="img-centered" alt="">
                             </a>
-                        </div>
-                        <div class="col-sm-4 portfolio-item data">
+                        </div> -->
+<!--                         <div class="col-sm-4 portfolio-item data">
                             <a href="#portfolio-modal-2" class="portfolio-link" data-toggle="modal">
                                 <div class="caption">
                                     <div class="caption-content">
@@ -257,10 +257,10 @@
                                         </h3>
                                     </div>
                                 </div>
-                                <img src="assets/img/demo-portfolio/7.jpg" class="img-centered" alt="">
+                                <img src="assets/img/demo-portfolio/project-placeholder.jpg" class="img-centered" alt="">
                             </a>
-                        </div>
-                        <div class="col-sm-4 portfolio-item academic">
+                        </div> -->
+<!--                         <div class="col-sm-4 portfolio-item academic">
                             <a href="#portfolio-modal-1" class="portfolio-link" data-toggle="modal">
                                 <div class="caption">
                                     <div class="caption-content">
@@ -281,7 +281,7 @@
                                 </div>
                                 <img src="assets/img/demo-portfolio/9.jpg" class="img-centered" alt="">
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -345,7 +345,7 @@
             <div class="container">
                 <div class="row first">
                     <div class="col-lg-12">
-                        <h2 class="page-header">Project Name</h2>
+                        <h2 class="page-header">PyCon PH 2023 Event Analysis</h2>
                     </div>
                 </div>
                 <div class="row">
@@ -355,19 +355,20 @@
                             <div class="item">
                                 <img src="assets/img/demo-portfolio/10.jpg" alt="">
                             </div>
-                            <div class="item">
+<!--                             <div class="item">
                                 <img src="assets/img/demo-portfolio/11.jpg" alt="">
                             </div>
                             <div class="item">
                                 <img src="assets/img/demo-portfolio/12.jpg" alt="">
-                            </div>
+                            </div> -->
 
                         </div>
                     </div>
                     <div class="col-md-4">
                         <h3>Project Description:</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, et, ea, accusantium reprehenderit aliquam numquam fuga natus fugiat odit distinctio illo at unde.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt, iusto molestiae possimus sint dignissimos! Laudantium, dolore, vel, sint, labore optio perferendis illo dolorum similique soluta eum cupiditate assumenda consequatur maiores.</p>
+                        <p>Analyzed attendee and financial data using Python to drive data-driven planning and reporting.</p>
+                        <p>Utilized Pandas, Matplotlib, and Seaborn for data aggregation and visualization, enhancing interpretability and stakeholder engagement.</p>
+                        <p>Produced a detailed PDF slide deck report, showcasing charts with insights and observations for strategic decision-making and reporting to a non-profit grants committee.</p>
                     </div>
                 </div>
                 <div class="row">
@@ -375,11 +376,9 @@
                         <h3>Project Details:</h3>
                         <ul class="list-unstyled project-details">
                             <li>
-                                <strong>Client:</strong>Lorem Ipsum</li>
+                                <strong>Tools Used: </strong>Python, Pandas, Matplotlib, Seaborn + Canva</li>
                             <li>
-                                <strong>Services:</strong>Web Design, Photography</li>
-                            <li>
-                                <strong>Date:</strong>January 2015</li>
+                                <strong>Date: </strong>October 2023</li>
                         </ul>
                     </div>
                 </div>
@@ -387,7 +386,7 @@
         </div>
     </div>
 
-    <!-- Standard Portfolio Modal - Video and Text -->
+        <!-- Standard Portfolio Modal - Images and Text -->
     <div id="portfolio-modal-2" class="portfolio-modal modal fade" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -399,17 +398,29 @@
             <div class="container">
                 <div class="row first">
                     <div class="col-lg-12">
-                        <h2 class="page-header">Project Name</h2>
+                        <h2 class="page-header">Data Strategy for PythonPH</h2>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-8">
-                        <iframe src="http://player.vimeo.com/video/87701971?title=0&amp;byline=0&amp;portrait=0" width="400" height="225" style="border: none;"></iframe>
+                        <div id="project-details-carousel" class="owl-carousel owl-theme">
+
+                            <div class="item">
+                                <img src="assets/img/demo-portfolio/10.jpg" alt="">
+                            </div>
+<!--                             <div class="item">
+                                <img src="assets/img/demo-portfolio/11.jpg" alt="">
+                            </div>
+                            <div class="item">
+                                <img src="assets/img/demo-portfolio/12.jpg" alt="">
+                            </div> -->
+
+                        </div>
                     </div>
                     <div class="col-md-4">
                         <h3>Project Description:</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, et, ea, accusantium reprehenderit aliquam numquam fuga natus fugiat odit distinctio illo at unde.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt, iusto molestiae possimus sint dignissimos! Laudantium, dolore, vel, sint, labore optio perferendis illo dolorum similique soluta eum cupiditate assumenda consequatur maiores.</p>
+                        <p>Developed a data strategy that established a roadmap for data-driven decision-making within the organization.</p>
+                        <p>Analyzed data usage and integrated technology to improve business outcomes and set data management guidelines.</p>
                     </div>
                 </div>
                 <div class="row">
@@ -417,11 +428,9 @@
                         <h3>Project Details:</h3>
                         <ul class="list-unstyled project-details">
                             <li>
-                                <strong>Client:</strong>Lorem Ipsum</li>
+                                <strong>Tools Used: </strong>Canva</li>
                             <li>
-                                <strong>Services:</strong>Web Design, Photography</li>
-                            <li>
-                                <strong>Date:</strong>January 2015</li>
+                                <strong>Date: </strong>August 2023</li>
                         </ul>
                     </div>
                 </div>
