--- a/index.html
+++ b/index.html
@@ -187,25 +187,25 @@
                             <a href="#portfolio-modal-1" class="portfolio-link" data-toggle="modal">
                                 <div class="caption">
                                     <div class="caption-content">
-                                        <h3><i class="fa fa-search fa-2x"></i>
+                                        <h3>PyCon PH 2023 Event Analysis using Python<!-- <i class="fa fa-search fa-2x"> --></i>
                                         </h3>
                                     </div>
                                 </div>
                                 <img src="assets/img/demo-portfolio/project-placeholder.jpg" class="img-centered" alt="">
                             </a>
                         </div>
-<!--                         <div class="col-sm-4 portfolio-item academic">
-                            <a href="#portfolio-modal-2" class="portfolio-link" data-toggle="modal">
+                         <div class="col-sm-4 portfolio-item academic">
+                            <a href="#portfolio-modal-4" class="portfolio-link" data-toggle="modal">
                                 <div class="caption">
                                     <div class="caption-content">
-                                        <h3><i class="fa fa-search fa-2x"></i>
+                                        <h3>FoodHub Order Analysis using Python</i>
                                         </h3>
                                     </div>
                                 </div>
-                                <img src="assets/img/demo-portfolio/2.jpg" class="img-centered" alt="">
+                                <img src="assets/img/demo-portfolio/project-placeholder.jpg" class="img-centered" alt="">
                             </a>
                         </div>
-                        <div class="col-sm-4 portfolio-item software">
+<!--                        <div class="col-sm-4 portfolio-item software">
                             <a href="#portfolio-modal-1" class="portfolio-link" data-toggle="modal">
                                 <div class="caption">
                                     <div class="caption-content">
@@ -220,25 +220,25 @@
                             <a href="#portfolio-modal-2" class="portfolio-link" data-toggle="modal">
                                 <div class="caption">
                                     <div class="caption-content">
-                                        <h3><i class="fa fa-search fa-2x"></i>
+                                        <h3>Data Strategy for PythonPH</i>
                                         </h3>
                                     </div>
                                 </div>
                                 <img src="assets/img/demo-portfolio/project-placeholder.jpg" class="img-centered" alt="">
                             </a>
                         </div>
-<!--                         <div class="col-sm-4 portfolio-item academic">
-                            <a href="#portfolio-modal-1" class="portfolio-link" data-toggle="modal">
+                         <div class="col-sm-4 portfolio-item academic">
+                            <a href="#portfolio-modal-5" class="portfolio-link" data-toggle="modal">
                                 <div class="caption">
                                     <div class="caption-content">
-                                        <h3><i class="fa fa-search fa-2x"></i>
+                                        <h3>New Wheels Data Analysis using SQL
                                         </h3>
                                     </div>
                                 </div>
-                                <img src="assets/img/demo-portfolio/5.jpg" class="img-centered" alt="">
+                                <img src="assets/img/demo-portfolio/project-placeholder.jpg" class="img-centered" alt="">
                             </a>
                         </div>
-                        <div class="col-sm-4 portfolio-item software">
+<!--                        <div class="col-sm-4 portfolio-item software">
                             <a href="#portfolio-modal-2" class="portfolio-link" data-toggle="modal">
                                 <div class="caption">
                                     <div class="caption-content">
@@ -260,18 +260,18 @@
                                 <img src="assets/img/demo-portfolio/project-placeholder.jpg" class="img-centered" alt="">
                             </a>
                         </div> -->
-<!--                         <div class="col-sm-4 portfolio-item academic">
-                            <a href="#portfolio-modal-1" class="portfolio-link" data-toggle="modal">
+                         <div class="col-sm-4 portfolio-item academic">
+                            <a href="#portfolio-modal-6" class="portfolio-link" data-toggle="modal">
                                 <div class="caption">
                                     <div class="caption-content">
-                                        <h3><i class="fa fa-search fa-2x"></i>
+                                        <h3>Gamers Arena Data Visualization using Tableau
                                         </h3>
                                     </div>
                                 </div>
-                                <img src="assets/img/demo-portfolio/8.jpg" class="img-centered" alt="">
+                                <img src="assets/img/demo-portfolio/project-placeholder.jpg" class="img-centered" alt="">
                             </a>
                         </div>
-                        <div class="col-sm-4 portfolio-item software">
+<!--                        <div class="col-sm-4 portfolio-item software">
                             <a href="#portfolio-modal-2" class="portfolio-link" data-toggle="modal">
                                 <div class="caption">
                                     <div class="caption-content">
@@ -369,6 +369,7 @@
                         <p>Analyzed attendee and financial data using Python to drive data-driven planning and reporting.</p>
                         <p>Utilized Pandas, Matplotlib, and Seaborn for data aggregation and visualization, enhancing interpretability and stakeholder engagement.</p>
                         <p>Produced a detailed PDF slide deck report, showcasing charts with insights and observations for strategic decision-making and reporting to a non-profit grants committee.</p>
+                        <!-- <p><a href="https://google.com" class="button">View Project</a></p> -->
                     </div>
                 </div>
                 <div class="row">
@@ -427,6 +428,140 @@
             </div>
         </div>
     </div>
+
+
+    <!-- Standard Portfolio Modal - Images and Text -->
+    <div id="portfolio-modal-4" class="portfolio-modal modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row first">
+                    <div class="col-lg-12">
+                        <h2 class="page-header">FoodHub Order Analysis using Python</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-8">
+
+                            <div class="item">
+                                <img src="assets/img/demo-portfolio/10.jpg" alt="">
+                            </div>
+
+                    </div>
+                    <div class="col-md-4">
+                        <h3>Project Description:</h3>
+                        <p>Case study project. A food aggregator company has stored the data of the different orders made by the registered customers in their online portal. I analyzed the data to draw some actionable insights for the business.</p>
+                        <p><a href="https://eportfolio.mygreatlearning.com/micaela-reyes" class="button">View Project</a></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-8">
+                        <h3>Project Details:</h3>
+                        <ul class="list-unstyled project-details">
+                            <li>
+                                <strong>Tools Used: </strong>Python, Pandas, Matplotlib, Seaborn</li>
+                            <li>
+                                <strong>Date: </strong>November 2023</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Standard Portfolio Modal - Images and Text -->
+    <div id="portfolio-modal-5" class="portfolio-modal modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row first">
+                    <div class="col-lg-12">
+                        <h2 class="page-header">New Wheels Data Analysis using SQL</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-8">
+
+                            <div class="item">
+                                <img src="assets/img/demo-portfolio/10.jpg" alt="">
+                            </div>
+
+                    </div>
+                    <div class="col-md-4">
+                        <h3>Project Description:</h3>
+                        <p>Case study project.</p>
+                        <p><a href="https://drive.google.com/file/d/1oCpiVGJE_Q8uL-Vp4AiMQtnqBVPdsNo9/view?usp=sharing" class="button">View Project</a></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-8">
+                        <h3>Project Details:</h3>
+                        <ul class="list-unstyled project-details">
+                            <li>
+                                <strong>Tools Used: </strong>SQL, Excel, Canva</li>
+                            <li>
+                                <strong>Date: </strong>September 2023</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Standard Portfolio Modal - Images and Text -->
+    <div id="portfolio-modal-6" class="portfolio-modal modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row first">
+                    <div class="col-lg-12">
+                        <h2 class="page-header">Gamers Arena Data Visualization using Tableau</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-8">
+
+                            <div class="item">
+                                <img src="assets/img/demo-portfolio/10.jpg" alt="">
+                            </div>
+
+                    </div>
+                    <div class="col-md-4">
+                        <h3>Project Description:</h3>
+                        <p>Case study project.</p>
+                        <p><a href="https://public.tableau.com/app/profile/codemickeycode/viz/GamersArenaProject_16926468920470/GamersArenaDashboard" class="button">View Project</a></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-8">
+                        <h3>Project Details:</h3>
+                        <ul class="list-unstyled project-details">
+                            <li>
+                                <strong>Tools Used: </strong>Tableau</li>
+                            <li>
+                                <strong>Date: </strong>August 2023</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <!-- Core JavaScript Files -->
     <script src="assets/js/jquery-1.10.2.js"></script>
