--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
                         <h3>Project Details:</h3>
                         <ul class="list-unstyled project-details">
                             <li>
-                                <strong>Tools Used: </strong>SQL, Excel, Canva</li>
+                                <strong>Tools Used: </strong>SQL, Excel, Powerpoint</li>
                             <li>
                                 <strong>Date: </strong>September 2023</li>
                         </ul>
