--- a/index.html
+++ b/index.html
@@ -205,17 +205,17 @@
                                 <img src="assets/img/demo-portfolio/project-placeholder.jpg" class="img-centered" alt="">
                             </a>
                         </div>
-<!--                        <div class="col-sm-4 portfolio-item software">
-                            <a href="#portfolio-modal-1" class="portfolio-link" data-toggle="modal">
+                       <div class="col-sm-4 portfolio-item software">
+                            <a href="#portfolio-modal-7" class="portfolio-link" data-toggle="modal">
                                 <div class="caption">
                                     <div class="caption-content">
-                                        <h3><i class="fa fa-search fa-2x"></i>
+                                        <h3>PyCon APAC Organizers Website (pycon.asia)</i>
                                         </h3>
                                     </div>
                                 </div>
-                                <img src="assets/img/demo-portfolio/3.jpg" class="img-centered" alt="">
+                                <img src="assets/img/demo-portfolio/project-placeholder.jpg" class="img-centered" alt="">
                             </a>
-                        </div> -->
+                        </div>
                         <div class="col-sm-4 portfolio-item data">
                             <a href="#portfolio-modal-2" class="portfolio-link" data-toggle="modal">
                                 <div class="caption">
@@ -238,17 +238,17 @@
                                 <img src="assets/img/demo-portfolio/project-placeholder.jpg" class="img-centered" alt="">
                             </a>
                         </div>
-<!--                        <div class="col-sm-4 portfolio-item software">
-                            <a href="#portfolio-modal-2" class="portfolio-link" data-toggle="modal">
+                        <div class="col-sm-4 portfolio-item software">
+                            <a href="#portfolio-modal-8" class="portfolio-link" data-toggle="modal">
                                 <div class="caption">
                                     <div class="caption-content">
-                                        <h3><i class="fa fa-search fa-2x"></i>
+                                        <h3>PyCert: Automated Certificate Generator and Emailer for PyCon PH</i>
                                         </h3>
                                     </div>
                                 </div>
-                                <img src="assets/img/demo-portfolio/6.jpg" class="img-centered" alt="">
+                                <img src="assets/img/demo-portfolio/project-placeholder.jpg" class="img-centered" alt="">
                             </a>
-                        </div> -->
+                        </div>
 <!--                         <div class="col-sm-4 portfolio-item data">
                             <a href="#portfolio-modal-2" class="portfolio-link" data-toggle="modal">
                                 <div class="caption">
@@ -561,6 +561,96 @@
             </div>
         </div>
     </div>
+
+    <!-- Standard Portfolio Modal - Images and Text -->
+    <div id="portfolio-modal-7" class="portfolio-modal modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row first">
+                    <div class="col-lg-12">
+                        <h2 class="page-header">PyCon APAC Organizers Website</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-8">
+
+                            <div class="item">
+                                <img src="assets/img/demo-portfolio/10.jpg" alt="">
+                            </div>
+
+                    </div>
+                    <div class="col-md-4">
+                        <h3>Project Description:</h3>
+                        <p>A platform where folks can conveniently access information about the Regional PyCons in APAC, all on a single page. Been collaborating with some awesome folks from the APAC community on this, and it's been an exciting journey so far.</p>
+                        <p><a href="https://github.com/PyConAPAC/PyConAPAC.github.io">Pull requests</a> are welcome! :)</p>
+                        <p><a href="https://pycon.asia" class="button">View Project</a></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-8">
+                        <h3>Project Details:</h3>
+                        <ul class="list-unstyled project-details">
+                            <li>
+                                <strong>Tools Used: </strong>Javascript, HTML, CSS</li>
+                            <li>
+                                <strong>Date: </strong>November 2021</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Standard Portfolio Modal - Images and Text -->
+    <div id="portfolio-modal-8" class="portfolio-modal modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row first">
+                    <div class="col-lg-12">
+                        <h2 class="page-header">PyCert:</br>Automated Certificate Generator and Emailer for PyCon PH</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-8">
+
+                            <div class="item">
+                                <img src="assets/img/demo-portfolio/10.jpg" alt="">
+                            </div>
+
+                    </div>
+                    <div class="col-md-4">
+                        <h3>Project Description:</h3>
+                        <p>This script, developed for PyCon PH 2015, automates the creation and emailing of attendance certificates. It processes a CSV file with attendee names and emails, generates PDF certificates, and sends them to each participant. Due to its efficiency, it has been used annually to distribute certificates to hundreds of attendees.</p>
+                        <p><a href="https://github.com/codemickeycode/pycert" class="button">View Project</a></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-8">
+                        <h3>Project Details:</h3>
+                        <ul class="list-unstyled project-details">
+                            <li>
+                                <strong>Tools Used: </strong>Python (reportlab, smtplib, csv)</li>
+                            <li>
+                                <strong>Date: </strong>July 2015</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
     <!-- Core JavaScript Files -->
