--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
             <div class="container">
                 <div class="row first">
                     <div class="col-lg-12">
-                        <h2 class="page-header">PyCert:</br>Automated Certificate Generator and Emailer for PyCon PH</h2>
+                        <h2 class="page-header">PyCert:Automated Certificate Generator and Emailer for PyCon PH</h2>
                     </div>
                 </div>
                 <div class="row">
