Update porfolio - pycert description

--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
             <div class="container">
                 <div class="row first">
                     <div class="col-lg-12">
-                        <h2 class="page-header">PyCert:Automated Certificate Generator and Emailer for PyCon PH</h2>
+                        <h2 class="page-header">PyCert: Automated Certificate Generator and Emailer for PyCon PH</h2>
                     </div>
                 </div>
                 <div class="row">
@@ -632,7 +632,8 @@
                     </div>
                     <div class="col-md-4">
                         <h3>Project Description:</h3>
-                        <p>This script, developed for PyCon PH 2015, automates the creation and emailing of attendance certificates. It processes a CSV file with attendee names and emails, generates PDF certificates, and sends them to each participant. Due to its efficiency, it has been used annually to distribute certificates to hundreds of attendees.</p>
+                        <p>This script, developed for PyCon PH 2015, automates the creation and emailing of attendance certificates. It processes a CSV file with attendee names and emails, generates PDF certificates, and sends them to each participant.</p>
+                        <p>Due to its efficiency, it has been used annually to distribute certificates to hundreds of attendees.</p>
                         <p><a href="https://github.com/codemickeycode/pycert" class="button">View Project</a></p>
                     </div>
                 </div>
