Update portfolio - pycon.asia description

--- a/index.html
+++ b/index.html
@@ -587,7 +587,8 @@
                     </div>
                     <div class="col-md-4">
                         <h3>Project Description:</h3>
-                        <p>A platform where folks can conveniently access information about the Regional PyCons in APAC, all on a single page. Been collaborating with some awesome folks from the APAC community on this, and it's been an exciting journey so far.</p>
+                        <p>A platform where folks can conveniently access information about the Regional PyCons in APAC, all on a single page.</p> 
+                        <p>Been collaborating with some awesome folks from the APAC community on this, and it's been an exciting journey so far.</p>
                         <p><a href="https://github.com/PyConAPAC/PyConAPAC.github.io">Pull requests</a> are welcome! :)</p>
                         <p><a href="https://pycon.asia" class="button">View Project</a></p>
                     </div>
