--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                                         </h3>
                                     </div>
                                 </div>
-                                <img src="assets/img/demo-portfolio/project-placeholder.jpg" class="img-centered" alt="">
+                                <img src="assets/img/demo-portfolio/project-pycon-asia.jpg" class="img-centered" alt="">
                             </a>
                         </div>
                         <div class="col-sm-4 portfolio-item data">
@@ -581,7 +581,7 @@
                     <div class="col-md-8">
 
                             <div class="item">
-                                <img src="assets/img/demo-portfolio/10.jpg" alt="">
+                                <img src="assets/img/demo-portfolio/project-pycon-asia-large.jpg" alt="">
                             </div>
 
                     </div>
@@ -598,7 +598,7 @@
                         <h3>Project Details:</h3>
                         <ul class="list-unstyled project-details">
                             <li>
-                                <strong>Tools Used: </strong>Javascript, HTML, CSS</li>
+                                <strong>Tools Used: </strong>JavaScript, HTML, CSS</li>
                             <li>
                                 <strong>Date: </strong>November 2021</li>
                         </ul>
