Update portfolio - new wheels project - add image

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                                         </h3>
                                     </div>
                                 </div>
-                                <img src="assets/img/demo-portfolio/project-placeholder.jpg" class="img-centered" alt="">
+                                <img src="assets/img/demo-portfolio/project-new-wheels.jpg" class="img-centered" alt="">
                             </a>
                         </div>
                         <div class="col-sm-4 portfolio-item software">
@@ -493,13 +493,21 @@
                     <div class="col-md-8">
 
                             <div class="item">
-                                <img src="assets/img/demo-portfolio/10.jpg" alt="">
+                                <img src="assets/img/demo-portfolio/project-new-wheels-large.jpg" alt="">
                             </div>
 
                     </div>
                     <div class="col-md-4">
                         <h3>Project Description:</h3>
-                        <p>Case study project.</p>
+                        <p>In this project, I tackled the challenge presented by New-Wheels, a company experiencing a steady decline in sales and a drop in new customer acquisition due to negative online feedback and ratings.</p>
+                        <p>Objectives:
+                            <ul>
+                                <li>Utilize MySQL to organize and analyze the data to address specific business questions.</li>
+                                <li>Create data visualizations from the analyzed data.</li>
+                                <li>Provide actionable recommendations and insights in the Quarterly Business Report for executive leadership.</li>
+                            </ul>
+                        </p>
+                        <p>This case study showcases my ability to transform raw data into valuable business insights, driving strategic decisions to improve customer satisfaction and company performance.</p>
                         <p><a href="https://drive.google.com/file/d/1oCpiVGJE_Q8uL-Vp4AiMQtnqBVPdsNo9/view?usp=sharing" class="button">View Project</a></p>
                     </div>
                 </div>
