Update portfolio - gamers arema - description

--- a/index.html
+++ b/index.html
@@ -551,7 +551,15 @@
                     </div>
                     <div class="col-md-4">
                         <h3>Project Description:</h3>
-                        <p>Case study project.</p>
+                        <p>This project focused on Gamers' Arena, a website that provides detailed information about video games, including releases and sales data across various platforms and genres. Recently, the company introduced a subscription model allowing gamers to play a limited number of games monthly.</p>
+                        <p>Objective:
+                            <ul>
+                                <li>Design an interactive Tableau dashboard to monitor key performance indicators (KPIs) crucial for assessing the health and effectiveness of the new subscription sales model.</li>
+                            </ul>
+                        </p>
+                        <p>The dashboard I created enables the director to visually track subscription metrics, analyze user engagement, and make data-driven decisions to optimize the subscription strategy. This project highlights my ability to leverage Tableau for strategic business storytelling and operational oversight.
+                        </p>
+
                         <p><a href="https://public.tableau.com/app/profile/codemickeycode/viz/GamersArenaProject_16926468920470/GamersArenaDashboard" class="button">View Project</a></p>
                     </div>
                 </div>
