--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                         </h3>
                                     </div>
                                 </div>
-                                <img src="assets/img/demo-portfolio/project-placeholder.jpg" class="img-centered" alt="">
+                                <img src="assets/img/demo-portfolio/project-foodhub.jpg" class="img-centered" alt="">
                             </a>
                         </div>
                        <div class="col-sm-4 portfolio-item software">
@@ -449,13 +449,20 @@
                     <div class="col-md-8">
 
                             <div class="item">
-                                <img src="assets/img/demo-portfolio/10.jpg" alt="">
+                                <img src="assets/img/demo-portfolio/project-foodhub-large.jpg" alt="">
                             </div>
 
                     </div>
                     <div class="col-md-4">
                         <h3>Project Description:</h3>
-                        <p>Case study project. A food aggregator company has stored the data of the different orders made by the registered customers in their online portal. I analyzed the data to draw some actionable insights for the business.</p>
+                        <p>In this academic project, I assumed the role of a Data Scientist for FoodHub, a hypothetical food aggregator company. The company provided a dataset detailing customer orders placed through their online portal, seeking to derive actionable business insights.</p>
+                        <p>Objective:
+                            <ul>
+                                <li>Conduct a detailed analysis of the order data to answer specific questions from the Data Science team, aiming to uncover trends and behaviors that could inform strategic business improvements.</li>
+                            </ul>
+                        <p>
+                        <p>Utilizing Python, I analyzed the data to identify key insights that could enhance customer satisfaction and operational efficiency. This project showcases my ability to apply Python in practical data analytics scenarios, providing the foundation for data-driven decision-making in a business context.</p>
+
                         <p><a href="https://eportfolio.mygreatlearning.com/micaela-reyes" class="button">View Project</a></p>
                     </div>
                 </div>
