--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <p>I blend my <strong>software development skills</strong> with a strong <strong>entrepreneurial mindset</strong> to succeed in data analysis.</p>
                         <p>Feel free to connect with me on linkedin, explore my
                             <span class="page-scroll"><a href="#portfolio"><strong>past projects</strong></a></span>,
-                            or <span class="page-scroll"><a href="#contact"><strong>contact me</strong></a></span> now if you're ready to get started!</p>
+                            or <span class="page-scroll"><a href="#contact"><strong>reach out</strong></a></span> if you're looking to <strong>hire me</strong> or work together!</p>
                         <ul class="list-inline">
                             <li>
                                 <a href="https://www.linkedin.com/in/codemickeycode/" class="btn btn-social-dark btn-linkedin">
