--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
                                     <i class="fa fa-fw fa-linkedin"></i>
                                 </a>
                             </li>
+<!--                             <li>
+                                <a href="https://blog.codemickeycode.com" class="btn btn-social-dark btn-pencil">
+                                    <i class="fa fa-fw fa-pencil"></i>
+                                </a>
+                            </li> -->
                         </ul>
                     </div>
                 </div>
