Update about me

--- a/index.html
+++ b/index.html
@@ -144,6 +144,9 @@
                         <p>I'm a <strong>software engineer</strong> with 15 years of experience, specializing in <strong>backend and web development</strong>. Recently, my interest has shifted to <strong>data analytics</strong>, aiming to tackle social disparities and promote <strong>economic empowerment</strong> through <strong>technology education</strong>. My journey into data analytics is not just a career transition; it's a mission to harness data for meaningful impact.</p>
 
                         <p>I blend my <strong>software development skills</strong> with a strong <strong>entrepreneurial mindset</strong> to succeed in data analysis.</p>
+
+                        <p>🛠️ Tools I Use: Linux, Python, SQL, Excel, Tableau</p>
+
                         <p>Feel free to connect with me on linkedin, explore my
                             <span class="page-scroll"><a href="#portfolio"><strong>past projects</strong></a></span>,
                             or <span class="page-scroll"><a href="#contact"><strong>reach out</strong></a></span> if you're looking to <strong>hire me</strong> or work together!</p>
