Update portfolio intro

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
                         <p>I blend my <strong>software development skills</strong> with a strong <strong>entrepreneurial mindset</strong> to succeed in data analysis.</p>
 
-                        <p>🛠️ Tools I Use: Linux, Python, SQL, Excel, Tableau</p>
+                        <p>🛠️ <strong>Tools I Use</strong>: Linux, Python, SQL, Excel, Tableau</p>
 
                         <p>Feel free to connect with me on linkedin, explore my
                             <span class="page-scroll"><a href="#portfolio"><strong>past projects</strong></a></span>,
@@ -172,6 +172,7 @@
                 <div class="row">
                     <div class="col-lg-12 text-center" data-scrollreveal="move 0">
                         <h2>Portfolio</h2>
+                        <p>Throughout my career, I've been lucky enough to develop data-driven solutions and build both powerful backend systems and user-friendly websites that really make a difference. Want to see the results? Check out some examples of my projects here:</p>
                         <hr class="primary">
                         <ul class="list-inline" id="filters">
                             <li>
