--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <div class="row">
                     <div class="col-lg-12 text-center" data-scrollreveal="move 0">
                         <h2>Portfolio</h2>
-                        <p>Throughout my career, I've been lucky enough to develop data-driven solutions and build powerful backend systems, co-create user-friendly websites, and design automation scripts that truly make a difference. Want to see the results? Check out some examples of my projects here:</p>
+                        <p>Throughout my career, I've been lucky enough to develop data-driven solutions and build powerful backend systems, collaborate on user-friendly websites, and create automation scripts that truly make a difference. Want to see the results? Check out some examples of my projects here:</p>
                         <hr class="primary">
                         <ul class="list-inline" id="filters">
                             <li>
