--- a/index.html
+++ b/index.html
@@ -375,9 +375,9 @@
                     </div>
                     <div class="col-md-4">
                         <h3>Project Description:</h3>
-                        <p>Analyzed attendee and financial data using Python to drive data-driven planning and reporting.</p>
-                        <p>Utilized Pandas, Matplotlib, and Seaborn for data aggregation and visualization, enhancing interpretability and stakeholder engagement.</p>
-                        <p>Produced a detailed PDF slide deck report, showcasing charts with insights and observations for strategic decision-making and reporting to a non-profit grants committee.</p>
+                        <p><strong>Data Analysis and Visualization:</strong></br>Analyzed attendee and financial data using Python to support data-driven planning and reporting.</p>
+                        <p>Utilized Pandas, Matplotlib, and Seaborn for data aggregation and visualization to interpretability and stakeholder engagement.</p>
+                        <p><strong>Reporting:</strong></br>Created a detailed PDF slide deck report, featuring charts that provide insights and observations aimed at strategic decision-making. This report was presented to a non-profit grants committee to aid in their assessment and funding decisions.</p>
                         <!-- <p><a href="https://google.com" class="button">View Project</a></p> -->
                     </div>
                 </div>
