Update about me

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <div class="col-lg-5 text-justify" data-scrollreveal="enter right">
                         <h2>About Me</h2>
                         <hr class="primary">
-                        <p>I'm a <strong>software engineer</strong> with 15 years of experience, specializing in <strong>backend and web development</strong>. Recently, my interest has shifted to <strong>data analytics</strong>, aiming to tackle social disparities and promote <strong>economic empowerment</strong> through <strong>technology education</strong>. My journey into data analytics is not just a career transition; it's a mission to harness data for meaningful impact.</p>
+                        <p>I'm a <strong>software engineer</strong> with 15 years of experience, specializing in <strong>backend and web development</strong>. I’ve recently shifted my focus to <strong>data analytics</strong> to help solve complex business and social challenges. <!-- As the Director of Operations at Python Philippines (PythonPH), my leadership in developing data strategies and enhancing data literacy has significantly improved our community engagement and operational efficiency. --></p>
 
                         <p>I blend my <strong>software development skills</strong> with a strong <strong>entrepreneurial mindset</strong> to succeed in data analysis.</p>
 
