--- a/index.html
+++ b/index.html
@@ -147,9 +147,8 @@
 
                         <p>🛠️ <strong>Tools I Use</strong>: Linux, Python, SQL, Excel, Tableau</p>
 
-                        <p>Feel free to connect with me on linkedin, explore my
-                            <span class="page-scroll"><a href="#portfolio"><strong>past projects</strong></a></span>,
-                            or <span class="page-scroll"><a href="#contact"><strong>reach out</strong></a></span> if you're looking to <strong>hire me</strong> or work together!</p>
+                        <p>Looking for a seasoned professional who delivers well-organized, thoughtful solutions that enhance both business and social outcomes? Let's connect! Explore <span class="page-scroll"><a href="#portfolio"><strong>my projects</strong></a></span>, add me on LinkedIn, or <a href="#contact"><strong>email me</strong>.</p>
+
                         <ul class="list-inline">
                             <li>
                                 <a href="https://www.linkedin.com/in/codemickeycode/" class="btn btn-social-dark btn-linkedin">
