Update About Me

--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
                     <div class="col-lg-5 text-justify" data-scrollreveal="enter right">
                         <h2>About Me</h2>
                         <hr class="primary">
-                        <p>I'm a <strong>software engineer</strong> with 15 years of experience, specializing in <strong>backend and web development</strong>. I’ve recently shifted my focus to <strong>data analytics</strong> to help solve complex business and social challenges. <!-- As the Director of Operations at Python Philippines (PythonPH), my leadership in developing data strategies and enhancing data literacy has significantly improved our community engagement and operational efficiency. --></p>
+                        <p>I'm a <strong>software engineer</strong> with 15+ years of experience, passionate about using <strong>data analytics</strong> to solve business and social challenges. She is deeply involved in the Python community, a Fellow of the Python Software Foundation Fellow, and serving as the Director of Operations for Python Philippines (PythonPH).
+                        </p>
 
                         <p>I blend my <strong>software development skills</strong> with a strong <strong>entrepreneurial mindset</strong> to succeed in data analysis.</p>
 
