Update About Me - links

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <div class="col-lg-5 text-justify" data-scrollreveal="enter right">
                         <h2>About Me</h2>
                         <hr class="primary">
-                        <p>I'm a <strong>software engineer</strong> with 15+ years of experience, passionate about using <strong>data analytics</strong> to solve business and social challenges. I am deeply involved in the Python community—a Fellow of the Python Software Foundation, and serving as the Director of Operations for Python Philippines (PythonPH).
+                        <p>I'm a <strong>software engineer</strong> with 15+ years of experience, passionate about using <strong>data analytics</strong> to solve business and social challenges. I am deeply involved in the Python community—a Fellow of the Python Software Foundation, and serving as the Director of Operations for <a href="https://python.ph">Python Philippines (PythonPH)</a>.
                         </p>
 
                         <p>I blend my <strong>software development skills</strong> with a strong <strong>entrepreneurial mindset</strong> to succeed in data analysis.</p>
