Update nav links - add talks

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
                         <li class="page-scroll">
                             <a href="#portfolio">Portfolio</a>
                         </li>
+                        <li>
+                            <a href="https://slides.com/codemickeycode">Talks</a>
+                        </li>
 <!--                          <li class="page-scroll">
                             <a href="#testimonials">Testimonials</a>
                         </li>-->
