--- a/index.html
+++ b/index.html
@@ -199,6 +199,17 @@
                             <a href="#portfolio-modal-1" class="portfolio-link" data-toggle="modal">
                                 <div class="caption">
                                     <div class="caption-content">
+                                        <h3>PyCon PH 2024 Event Analysis using Python<!-- <i class="fa fa-search fa-2x"> --></i>
+                                        </h3>
+                                    </div>
+                                </div>
+                                <img src="assets/img/demo-portfolio/project-event-report2024.jpg" class="img-centered" alt="">
+                            </a>
+                        </div>
+                        <div class="col-sm-4 portfolio-item data">
+                            <a href="#portfolio-modal-1" class="portfolio-link" data-toggle="modal">
+                                <div class="caption">
+                                    <div class="caption-content">
                                         <h3>PyCon PH 2023 Event Analysis using Python<!-- <i class="fa fa-search fa-2x"> --></i>
                                         </h3>
                                     </div>
@@ -357,7 +368,61 @@
             <div class="container">
                 <div class="row first">
                     <div class="col-lg-12">
-                        <h2 class="page-header">PyCon PH 2023 Event Analysis</h2>
+                        <h2 class="page-header">PyCon PH 2024 Event Report</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-8">
+                        <div id="project-details-carousel" class="owl-carousel owl-theme">
+
+                            <div class="item">
+                                <img src="assets/img/demo-portfolio/project-event-report2024-large.jpg" alt="">
+                            </div>
+<!--                             <div class="item">
+                                <img src="assets/img/demo-portfolio/11.jpg" alt="">
+                            </div>
+                            <div class="item">
+                                <img src="assets/img/demo-portfolio/12.jpg" alt="">
+                            </div> -->
+
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <h3>Project Description:</h3>
+                        <p><strong>Data Analysis and Visualization:</strong></br>Analyzed attendee data using Python to support data-driven planning and reporting.</p>
+                        <p>Utilized Pandas, Matplotlib, and Seaborn for data aggregation and visualization to interpretability and engagement with stakeholders.</p>
+                        <p><strong>Reporting:</strong></br>Created a detailed PDF slide deck report featuring charts and key insights, aimed at improving the event each year based on defined success metrics.</p>
+                        <p><a href="https://drive.google.com/file/d/1say12ODKoBBFN9CWLfxoBQWnF6b1Abfh/view?usp=sharing" class="button">View Project</a></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-8">
+                        <h3>Project Details:</h3>
+                        <ul class="list-unstyled project-details">
+                            <li>
+                                <strong>Tools Used: </strong>Python, Pandas, Matplotlib, Seaborn + Canva</li>
+                            <li>
+                                <strong>Date: </strong>September 2024</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Standard Portfolio Modal - Images and Text -->
+    <div id="portfolio-modal-1" class="portfolio-modal modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row first">
+                    <div class="col-lg-12">
+                        <h2 class="page-header">PyCon PH 2023 Event Report</h2>
                     </div>
                 </div>
                 <div class="row">
