--- a/index.html
+++ b/index.html
@@ -378,12 +378,6 @@
                             <div class="item">
                                 <img src="assets/img/demo-portfolio/project-event-report2024-large.jpg" alt="">
                             </div>
-<!--                             <div class="item">
-                                <img src="assets/img/demo-portfolio/11.jpg" alt="">
-                            </div>
-                            <div class="item">
-                                <img src="assets/img/demo-portfolio/12.jpg" alt="">
-                            </div> -->
 
                         </div>
                     </div>
@@ -427,26 +421,15 @@
                 </div>
                 <div class="row">
                     <div class="col-md-8">
-                        <div id="project-details-carousel" class="owl-carousel owl-theme">
-
-                            <div class="item">
-                                <img src="assets/img/demo-portfolio/project-event-report-large.jpg" alt="">
-                            </div>
-<!--                             <div class="item">
-                                <img src="assets/img/demo-portfolio/11.jpg" alt="">
-                            </div>
-                            <div class="item">
-                                <img src="assets/img/demo-portfolio/12.jpg" alt="">
-                            </div> -->
-
+                        <div class="item">
+                            <img src="assets/img/demo-portfolio/project-event-report-large.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-md-4">
                         <h3>Project Description:</h3>
-                        <p><strong>Data Analysis and Visualization:</strong></br>Analyzed attendee and financial data using Python to support data-driven planning and reporting.</p>
+                        <p><strong>Data Analysis and Visualization:</strong></br>Analyzed attendee data using Python to support data-driven planning and reporting.</p>
                         <p>Utilized Pandas, Matplotlib, and Seaborn for data aggregation and visualization to enhance interpretability and stakeholder engagement.</p>
                         <p><strong>Reporting:</strong></br>Created a detailed PDF slide deck report, featuring charts that provide insights and observations aimed at strategic decision-making. This report was presented to a non-profit grants committee to aid in their assessment and funding decisions.</p>
-                        <!-- <p><a href="https://google.com" class="button">View Project</a></p> -->
                         <p><a href="https://drive.google.com/file/d/1wsaOTkuJlyOVQt3_b2uDadyuJl2kWgSZ/view?usp=sharing" class="button">View Project</a></p>
                     </div>
                 </div>
@@ -464,6 +447,7 @@
             </div>
         </div>
     </div>
+
 
     <!-- Standard Portfolio Modal - Images and Text -->
     <div id="portfolio-modal-3" class="portfolio-modal modal fade" tabindex="-1" role="dialog" aria-hidden="true">
