Update about me

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
                         <p>🛠️ <strong>Tools I Use</strong>: Linux, Python, SQL, Excel, Tableau</p>
 
-                        <p>Looking for a seasoned professional who delivers well-organized, thoughtful solutions that enhance both business and social outcomes? Let's connect! Explore <span class="page-scroll"><a href="#portfolio"><strong>my projects</strong></a></span>, add me on LinkedIn, or <a href="#contact"><strong>email me</strong>.</p>
+                        <p>Let's connect! Explore <span class="page-scroll"><a href="#portfolio"><strong>my projects</strong></a></span>, add me on LinkedIn, or <a href="#contact"><strong>email me</strong>.</p>
 
                         <ul class="list-inline">
                             <li>
